2005-08-21  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/python/sudoku.py: Now first levels uses colored symbols instead
	of letters (not playable yet)

2005-08-21  Bruno coudoin  <bruno.coudoin@free.fr>

	* po/POTFILES.in: added missing entries
	* src/boards/python/sudoku.py: now the list of sudoku of the same level
	  are randomized

2005-08-21  Yves Combe  <yves@ycombe.net>

	fix stripping trailing space in profile names (bruno).
	fix get_user to pass None in python if user = NULL.
	fix pythontest check a user is logged or not.
	put buttons in boards_list to make global conf toolbox.
	fix get_conf to check first global conf for profile (board_id = -1),
	then default conf for boards (profile_id = 1), yhen profile & board conf.

	* src/boards/py-mod-admin.c: (py_gcompris_set_current_user),
	(py_gcompris_get_current_user):
	* src/boards/python/admin/board_list.py:
	* src/boards/python/admin/profile_edit.py:
	* src/boards/python/pythontest.py:
	* src/gcompris/gcompris_db.c: (gcompris_get_conf_with_table),
	(gcompris_get_conf), (gcompris_get_board_conf):

2005-08-21  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/python/sudoku.py: Implemented support for non 9x9 sudoku
	Implemented level management
	The first level is playable
	
2005-08-20  Yves Combe  <yves@ycombe.net>

	fix GcomprisUser binding (user->login was missing).
	add missing python bindings in admin: get_users_from_group, set_current_user, get_current_user.
	login.py now uses that.
	pythontest check get_current_user
	
	* src/boards/py-gcompris-user.c: (pyGcomprisUserType_getattr):
	* src/boards/py-mod-admin.c: (py_gcompris_get_users_from_group),
	(py_gcompris_set_current_user), (py_gcompris_get_current_user):
	* src/boards/python/login.py:
	* src/boards/python/pythontest.py:
	* src/gcompris/gcompris_db.h:

2005-08-20  Bruno coudoin  <bruno.coudoin@free.fr>

	Now the square number that cause the number entering refusal is
	highlighted

	* boards/sudoku.xml.in:
	* src/boards/python/sudoku.py: